Attempted fix for background bleed on some images

--- a/assets/css/pages/_index.scss
+++ b/assets/css/pages/_index.scss
@@ -54,7 +54,7 @@
           width: 100%;
           min-height: inherit;
           background-color: #333333;
-          transform: scale(1);
+          transform: scale(1.05);
           // transform-origin: -100% 50%;
           transition: all 0.7s cubic-bezier(0.23, 1, 0.32, 1);
           transition-delay: 0.4s;
