--- a/assets/css/pages/_team.scss
+++ b/assets/css/pages/_team.scss
@@ -37,7 +37,7 @@
         background-size: cover;
         transition: all 0.7s cubic-bezier(0.23, 1, 0.32, 1);
         transition-delay: 0.5s;
-        transform: translate3d(0px, 0px, 0px);
+        transform: translate3d(0px, 0px, 0px) scale(1.07);
       }
     }
     .image-wrapper.no-reveal{
@@ -76,7 +76,7 @@
       transition: filter 0.6s;
       transition: all 0.7s cubic-bezier(0.23, 1, 0.32, 1);
       transition-delay: 0.5s;
-      transform: translate3d(0px, 0px, 0px);
+      transform: translate3d(0px, 0px, 0px) scale(1.04);
     }
     
     .avatar:hover{
